12/20/19
  - Just some renaming and cleanup

12/17/19
  - Added fragmented write for arrays larger than a packet

10/29/19
  - Moved examples from pylogix to root directory
  - Added comments about how data is returned
  - Added IP address and slot as parameters to PLC
  - Upped version to 0.4.12

10/02/19
  - setup.py imports version from __init__
  - update tests\readme with tox info

10/01/19
  - Added tox.ini for automated tests

10/01/19
  - Added unittest for clx, and compactlogix.
  - eip.py changes were fixed according to PEP8

09/30/19
  -Fixed format of str & repr in Response
  
09/27/19 - kodaman2
  - Added Repr, and str to Response class as per #77

09/27/19 - kodaman2
  - Fixed Multiple paths for status on GetProgramsList

09/27/19 - kodaman2
  - Modified to return correct return status, when nesting Response.Status to another Response object

09/25/19 - kodaman2
  - Path for GetProgramTagList to return LGXTag properly

09/25/19 - kodaman2
  - Fixed _writeTag to non existent tags exception error

09/25/19 - kodaman2
  - Updated README with old installation instructions

09/23/19 - kodaman2
  - Addressed GetProgramsList and GetProgramTagList issues

09/23/19 - ambersnow
  - Fixed GetTagList() AtributeError

09/18/19
  -Changed the case of Response to match the rest of the project, minimizing the impact of the new change

09/17/19
  -Rewrote all methods to return Response class, which includes tag_name, value and status
  -Updated README

08/26/19
  -Updated gitignore
  -Lowered default connection size to support older hardware/firmware by default

08/08/19
  -Fixed writing LREAL data types

07/18/19
  -Fixed imports, a few erros from restructure

07/09/19
  -cleanup
  -Restructured class a bit
  -Fixed reading tuples
  -Cleaned up imports
  
06/13/19
  -Fixed reading a list of a single item

05/31/19
  -Fixed connection parameters that cause Micro8xx to fail forwrad open

05/28/19
  -Fixed closing socket, suggested by Derriick

05/05/19