@@ -19,7 +19,6 @@ to read.
 from pylogix import PLC
 
 with PLC() as comm:
-    comm = PLC()
     comm.IPAddress = '192.168.1.9'
     ret = comm.Read('LargeArray[0]', 500)
     print(ret.Value)
