@@ -25,7 +25,6 @@ initial read...
 from pylogix import PLC
 
 with PLC() as comm:
-    comm = PLC()
     comm.IPAddress = '192.168.1.9'
     ret = comm.Read('CurrentScreen', datatype=196)
     print(ret.Value)
