@@ -15,6 +15,5 @@ this is handled automatically.
 from pylogix import PLC
 
 with PLC() as comm:
-    comm = PLC()
     comm.IPAddress = '192.168.1.9'
     comm.Write('CurrentScreen', 10)
