@@ -20,6 +20,5 @@ Program:MiscHMI.TimeArray[0]
 from pylogix import PLC
 
 with PLC() as comm:
-    comm = PLC()
     comm.IPAddress = '192.168.1.9'
     comm.Write('Program:MiscHMI.TimeArray[0]', 2019)
